cm_condor__defconfig: Enable LZ4 compression for ZRAM
Enable LZ4 for ZRAM.

Before: (LZO Compression, -Os)
  Compress:   33.6 MB/s
  Decompress: 97.1 MB/a

After:  (LZ4 Compression, -O2)
  Compress:   51.0 MB/s (52% improved)
  Decompress: 130.8 MB/s (35% improved)

Change-Id: I1e5d7cec404ca2d046ce260a2311ddc4edbe62f1
Signed-off-by: Chris Fries <cfries@motorola.com>
Reviewed-on: http://gerrit.mot.com/697905
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Russell Knize <rknize@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/cm_condor_defconfig
+++ b/arch/arm/configs/cm_condor_defconfig
@@ -2,6 +2,8 @@
 CONFIG_BOOTINFO=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_KERNEL_XZ=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_SYSVIPC=y
@@ -455,6 +457,7 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ZSMALLOC=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
